// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Breadcrumbs> Snapshot renders collapsed breadcrumbs correctly 1`] = `
.c1 {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  max-width: 100%;
}

.c1:before {
  opacity: 0.5;
  padding: 0 4px;
  content: ">";
  -webkit-transform: scaleX(0.5);
  -ms-transform: scaleX(0.5);
  transform: scaleX(0.5);
}

.c1 > * {
  text-overflow: ellipsis;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 > *:link:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1:first-child:before {
  content: none;
}

.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-size: 11px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  padding: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: inherit;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

<ol
  className="c0"
>
  <li
    className="c1"
    onClick={[Function]}
  >
    Test 1
  </li>
  <li
    className="c1"
    onClick={[Function]}
  >
    ...
  </li>
  <li
    className="c1"
    onClick={[Function]}
  >
    Testing a really lon...
  </li>
</ol>
`;

exports[`<Breadcrumbs> Snapshot renders expanded breadcrumbs correctly 1`] = `
.c1 {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  max-width: 100%;
}

.c1:before {
  opacity: 0.5;
  padding: 0 4px;
  content: ">";
  -webkit-transform: scaleX(0.5);
  -ms-transform: scaleX(0.5);
  transform: scaleX(0.5);
}

.c1 > * {
  text-overflow: ellipsis;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 > *:link:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1:first-child:before {
  content: none;
}

.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-size: 11px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  padding: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: inherit;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

<ol
  className="c0"
>
  <li
    className="c1"
    onClick={[Function]}
  >
    Test 1
  </li>
  <li
    className="c1"
    onClick={[Function]}
  >
    Test 2
  </li>
  <li
    className="c1"
    onClick={[Function]}
  >
    Test 3
  </li>
  <li
    className="c1"
    onClick={[Function]}
  >
    Testing a really lon...
  </li>
</ol>
`;
